--- a/Chpater08_클래스종류/.project
+++ b/Chpater08_클래스종류/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Chpater08_클래스종류</name>
+	<name>Chapter08_클래스종류</name>
 	<comment></comment>
 	<projects>
 	</projects>
